assets/layout.css
:root {
    --main-container-width-size: 50%
}

section {
    margin-top: 8rem;
}

.navbar-header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 4rem;
    display: flex;
    justify-content: space-between;
}

.navbar-header * {
    height: 100%;
}

.logo img {
    max-height: 35%;
}

.navbar-header .side {
    display: flex;
    flex-direction: row;
    margin-inline: 1rem;
    gap: 1.5rem;
}

.navbar-header .side div *,
.navbar-header .side .links * {
    display: flex;
    align-items: center;
}

.navbar-header .side.right .login-signup {
    display: flex;
    align-items: center;
}

.navbar-header .links li {
    padding-inline: 1rem;
}

.navbar-header .links.login-signup > li {
    cursor: auto;
}

.navbar-header .side .links{
    display: flex;
    flex-direction: row;
}

/*  JUMBO   */
.jumbo {
    display: flex;
    justify-content: center;
    margin-top: 4rem;
}

.jumbo .container {
    width: 70%;
    display: flex;
    align-content: center;
    align-items: center;
    flex-direction: column;
    gap: 2rem;
    padding: 4rem;
}

.jumbo .box {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.jumbo .box .content {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.jumbo .box .content.left {
    flex: 0 1 25%;
}
.jumbo .box .content.right {
    flex: 0 1 75%;
}

.jumbo .content.left .arrow-down {
    max-width: 15%;
}

.jumbo .content.right img {
    margin-bottom: -10rem;
    max-width: 100%;
}

/*  SECTION PRICES  */
section.prices {
    display: flex;
    justify-content: center;
}

section.prices .container {
    max-width: var(--main-container-width-size);
    display: flex;
    justify-content: center;
    flex-direction: column;
}

section.prices .container > div {
    margin-bottom: 3rem;
}

section.prices .subscription-period {
    display: flex;
}

section.prices .subscription-period .radio{
    padding-right: 2rem;
}

.subscription-choice-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
}

.subscription-choice-container .box {
    flex: 1 1 calc((100% - 2rem * 2) / 3);
}

.subscription-choice-container .box > div:first-child {
    padding: .5rem;
}

.subscription-choice-container .box > div:last-child {
    padding: 1.5rem;
}

.subscription-details div > div {
    margin-bottom: 1rem;
}

.subscription-details hr {
    max-width: 20%;
    margin-bottom: 1rem;
}

.box.enterprise .pricing {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/*  section find partner  */
section.find-partner {
    display: flex;
    justify-content: center;
}

section.find-partner .container {
    max-width: var(--main-container-width-size);
}

.find-partner .box {
    display: flex;
    justify-content: space-between;
}

.find-partner .box img {
    flex: 0 1 60%;
    max-width: 140%;
}

.find-partner .box div{
    flex: 0 1 40%;
}

.find-partner .box div:last-child *{
    margin-top: 1.5rem;
}

/*  section drop box functionality  */
section.dropbox-functionality {
    display: flex;
    justify-content: center;
}

section.dropbox-functionality .container {
    max-width: var(--main-container-width-size);
    display: flex;
    flex-wrap: wrap;
    gap: 3rem;
}

.dropbox-functionality .container .box {
    display: flex;
    flex-direction: column;
    flex: 0 1 calc((100% - 3rem * 2) / 3);
}

.dropbox-functionality .container .box img{
    max-width: 100%;
}

.dropbox-functionality .container .box * {
    margin-bottom: 1rem;
}

/*  client reviews section  */
section.client-reviews {
    display: flex;
    justify-content: center;
}

section.client-reviews .container {
    width: var(--main-container-width-size);
    display: flex;
    flex-direction: column;
}

section.client-reviews .container * {
    margin-top: 1.5rem;
    flex: 1 1 50%;
}

/*  design-it section   */
section.design-it .container-top {
    width: 100%;
    display: flex;
}

.design-it .box-big {
    flex: 0 1 calc(100% / 3);
    aspect-ratio: 1 / 1;
    display: flex;
    flex-wrap: wrap;
}

.design-it .box-big .box-small {
    flex: 0 1 50%;
    position: relative;
}

.design-it .box-big .box-small img {
    max-width: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.design-it .box-big.middle {
    padding: 2.5rem;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    overflow-x: scroll;
}

.design-it .box-big.middle * {
    margin-bottom: 2.5rem;
}

.design-it .box-big.middle hr {
    width: 20%;
}

.design-it .box-big.middle img {
    max-width: 50%;
}

.design-it .container-bot {
    height: 15rem;
    display: flex;
    justify-content: center;
}

.container-bot .container {
    width: var(--main-container-width-size);
}

.container-bot .try-for-free {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.container-bot .try-for-free * {
    flex: 0 1 40%;
}

